--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,31 @@
 <h1> New Event</h1>
 
-<%= render 'form', event: @event %>
+
+
+
+ <form action=  <%= events_path  %> method="post">
+ 	<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+  Title:<br>
+  <input type="text" name="Title" value=""><br>
+  Description:<br>
+  <input type="text" name="Description" value=""><br>
+  Location:<br>
+  <input type="text" name="Location" value=""><br>
+    Price:<br>
+  <input type="text" name="price" value=""> $ <br>
+Duration:<br>
+  <input type="text" name="duration" value=""> $ <br>
+
+  <label for="start">Start date:</label>
+
+<input type="date" id="start" name="start_date"
+       value="2019-05-07"
+       min="2019-05-05" max="3018-12-31">
+       <br>
+  <input type="submit" value="Submit">
+</form> 
+
+<%= %>
+
 
 <%= link_to 'Back', events_path %>
