--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,18 @@
 <p id="notice"><%= notice %></p>
 
+
+
+<h1>PARTYYY <%= @event.title %></h1>
+
+
+<p> <%= @event.description  %>
+</p>
+<%= @event.price %> $ / <%= @event.location %>
+
+<br>
+
+<%= %>
+
+
 <%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %>
